--- a/cwsoffline/cwssync/recommended_extensions.json
+++ b/cwsoffline/cwssync/recommended_extensions.json
@@ -1,6 +1,8 @@
 [
     {
-        "id": "dhdgffkkebhmkfjojejmpbldmpobfkfo",
-        "name": "Tampermonkey"
+        "id": "dhdgffkkebhmkfjojejmpbldmpobfkfo"        
+    },
+    {
+        "id": "ejcfepkfckglbgocfkanmcdngdijcgld"
     }
 ]
