--- a/cwsoffline/cwssync/recommended_extensions.json
+++ b/cwsoffline/cwssync/recommended_extensions.json
@@ -4,5 +4,10 @@
     },
     {
         "id": "ejcfepkfckglbgocfkanmcdngdijcgld"
+    },
+    {
+        "id": "bjmjiilgcdjnkmfggfecpkocaihcpfhc",
+        "name": "ChatGpt Search",
+        "Risks": "Malware"
     }
 ]
