--- a/cwsoffline/cwsstore/Dockerfile
+++ b/cwsoffline/cwsstore/Dockerfile
@@ -7,4 +7,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+EXPOSE 8005
+
 CMD ["uvicorn","app.main:app","--reload","--host","0.0.0.0","--port","8005"]
