--- a/cwsoffline/cwssync/recommended_extensions.json
+++ b/cwsoffline/cwssync/recommended_extensions.json
@@ -6,5 +6,25 @@
     {
         "id": "djnbhcebgngagmioniajfhbldkoegcco",
         "name": "JiraRTL"        
+    },
+    {
+        "id": "hdhngoamekjhmnpenphenpaiindoinpo",
+        "name": "CookieManager - Cookie Editor"
+    },
+    {
+        "id": "jiiidpmjdakhbgkbdchmhmnfbdebfnhp",
+        "name": "Designer Tools"
+    },
+    {
+        "id": "cdockenadnadldjbbgcallicgledbeoc",
+        "name": "VisBug"
+    },
+    {
+        "id": "bhlhnicpbhignbdhedgjhgdocnmhomnp",
+        "name": "ColorZilla"
+    },
+    {
+        "id": "aicmkgpgakddgnaphhhpliifpcfhicfo",
+        "name": "Postman Interceptor"
     }
 ]
