--- a/.github/workflows/dockerhub-deploy.yml
+++ b/.github/workflows/dockerhub-deploy.yml
@@ -32,5 +32,5 @@ jobs:
         file: ./cwsoffline/cwsstore/Dockerfile
         push: true
         tags: |
-          ${{ secrets.DOCKER_USERNAME }}/cwsstore:latest
-          ${{ secrets.DOCKER_USERNAME }}/cwsstore:${{ env.VERSION }}
+          ${{ secrets.DOCKERHUB_USERNAME }}/cwsstore:latest
+          ${{ secrets.DOCKERHUB_USERNAME }}/cwsstore:${{ env.VERSION }}
