--- a/.github/workflows/dockerhub-deploy.yml
+++ b/.github/workflows/dockerhub-deploy.yml
@@ -17,7 +17,7 @@ jobs:
       id: versioning
       run: |
         echo "BUILD_NUMBER=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
-        echo "VERSION=v1.$BUILD_NUMBER" >> $GITHUB_ENV
+        echo "VERSION=$BUILD_NUMBER" >> $GITHUB_ENV
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -25,7 +25,27 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push Docker image
+    - name: Build and push cwssync
+      uses: docker/build-push-action@v4
+      with:
+        context: ./cwsoffline/cwssync
+        file: ./cwsoffline/cwssync/Dockerfile
+        push: true
+        tags: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/cwssync:latest
+          ${{ secrets.DOCKERHUB_USERNAME }}/cwssync:${{ env.VERSION }}
+
+    - name: Build and push cwsbuild
+      uses: docker/build-push-action@v4
+      with:
+        context: ./cwsoffline/cwsbuild
+        file: ./cwsoffline/cwsbuild/Dockerfile
+        push: true
+        tags: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/cwsbuild:latest
+          ${{ secrets.DOCKERHUB_USERNAME }}/cwsbuild:${{ env.VERSION }}
+
+    - name: Build and push cwsstore
       uses: docker/build-push-action@v4
       with:
         context: ./cwsoffline/cwsstore
