--- a/.github/workflows/dockerhub-deploy.yml
+++ b/.github/workflows/dockerhub-deploy.yml
@@ -16,8 +16,10 @@ jobs:
     - name: Generate version
       id: versioning
       run: |
-        echo "BUILD_NUMBER=$(date +%Y%m%d%H%M%S)" >> $GITHUB_ENV
+        BUILD_NUMBER=$(date +%Y%m%d%H%M%S)
+        echo "BUILD_NUMBER=$BUILD_NUMBER" >> $GITHUB_ENV
         echo "VERSION=$BUILD_NUMBER" >> $GITHUB_ENV
+        echo "Generated version: $BUILD_NUMBER"
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
