add release types

--- a/.github/workflows/dockerhub-deploy.yml
+++ b/.github/workflows/dockerhub-deploy.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main # Trigger on pushes to the main branch
+  release:
+    types: [edited, released]
 
 jobs:
   build-and-push:
