--- a/.github/workflows/dockerhub-deploy.yml
+++ b/.github/workflows/dockerhub-deploy.yml
@@ -61,7 +61,7 @@ jobs:
         push: true
         tags: |
           ${{ secrets.DOCKERHUB_USERNAME }}/cwsbuild:latest
-          ${{ secrets.DOCKERHUB_USERNAME }}/cwsbuild:${{ steps.get_version.outputs.version-without-v }}}
+          ${{ secrets.DOCKERHUB_USERNAME }}/cwsbuild:${{ steps.get_version.outputs.version-without-v }}
 
     - name: Build and push cwsstore
       uses: docker/build-push-action@v6
