update recommended extensions list

--- a/cwsoffline/cwssync/recommended_extensions.json
+++ b/cwsoffline/cwssync/recommended_extensions.json
@@ -26,5 +26,17 @@
     {
         "id": "aicmkgpgakddgnaphhhpliifpcfhicfo",
         "name": "Postman Interceptor"
+    },
+    {
+        "id": "ndaciljfdnekbnmcpjidoebejglcjidc",
+        "name": "Cyber-Ark Clipboard Extension"
+    },
+    {
+        "id": "dmghijelimhndkbmpgbldicpogfkceaj",
+        "name": "Dark Mode"
+    },
+    {
+        "id": "eimadpbcbfnmbkopoojfekhnkhdbieeh",
+        "name": "Dark Reader"
     }
 ]
