add more recommended exts

--- a/cwsoffline/cwssync/recommended_extensions.json
+++ b/cwsoffline/cwssync/recommended_extensions.json
@@ -50,5 +50,9 @@
     {
         "id": "cmkdbmfndkfgebldhnkbfhlneefdaaip",
         "name": "WhatRuns"
+    },
+    {
+        "id": "mpbmflcodadhgafbbakjeahpandgcbch",
+        "name": "SVG Gobbler"
     }
 ]
